sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:13: error: Boolean does not take parameters
    }else(pos_nain!=getNombreValeurs-1){
                                       ^