sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var pos_nain:Int =1;
  
  
  
  while( pos_nain==getNombreValeurs-1){
    if(plusPetit(pos_nain+1,pos_nain)){
      echange(pos_nain,pos_nain+1);
      if(pos_nain>0){
        pos_nain=pos_nain-1;
      }
    }else(pos_nain!=getNombreValeurs-1){
      pos_nain=pos_nain-1;
    }
    
   
  }
  
  
  
  
}